[gd_scene load_steps=9 format=2]

[ext_resource path="res://CharSelect/Assets/Papers/Art-continued-fracs.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/GloriaHallelujah.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/SourceCodePro-Regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Networking/ConnectionScreen/ConnectionScreen.gd" type="Script" id=5]

[sub_resource type="Theme" id=4]
default_font = ExtResource( 3 )
HBoxContainer/constants/separation = 20
Label/colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
VBoxContainer/constants/separation = 15

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 3
outline_color = Color( 0.333333, 0.333333, 0.333333, 1 )
extra_spacing_top = -40
extra_spacing_bottom = -30
extra_spacing_char = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 1
outline_color = Color( 0.333333, 0.333333, 0.333333, 1 )
extra_spacing_top = -10
extra_spacing_bottom = -10
font_data = ExtResource( 4 )

[node name="ConnectionScreen" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
script = ExtResource( 5 )

[node name="a" type="VBoxContainer" parent="."]
margin_left = 330.0
margin_top = 63.0
margin_right = 950.0
margin_bottom = 656.0
rect_min_size = Vector2( 600, 0 )

[node name="Local" type="Label" parent="a"]
margin_right = 620.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Local"
align = 1
valign = 1

[node name="b" type="HBoxContainer" parent="a"]
margin_top = 85.0
margin_right = 620.0
margin_bottom = 160.0
alignment = 1

[node name="c" type="VBoxContainer" parent="a/b"]
margin_right = 300.0
margin_bottom = 75.0
custom_constants/separation = 2

[node name="LocalLabel1" type="Label" parent="a/b/c"]
margin_right = 300.0
margin_bottom = 41.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "Player 1 Input"
align = 1

[node name="LocalInput1" type="OptionButton" parent="a/b/c"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 0 )
text = "Keyboard (Arrows, ASD)"
clip_text = true
align = 1
items = [ "Keyboard (Arrows, ASD)", null, false, 4096, null, "PlayStation Classic Controller", null, false, 0, null ]
selected = 0

[node name="d" type="VBoxContainer" parent="a/b"]
margin_left = 320.0
margin_right = 620.0
margin_bottom = 75.0
custom_constants/separation = 2

[node name="LocalLabel2" type="Label" parent="a/b/d"]
margin_right = 300.0
margin_bottom = 41.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "Player 2 Input"
align = 1

[node name="LocalInput2" type="OptionButton" parent="a/b/d"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 0 )
text = "Keyboard (Arrows, ASD)"
clip_text = true
align = 1
items = [ "Keyboard (Arrows, ASD)", null, false, 4096, null, "PlayStation Classic Controller", null, false, 0, null, "Mash (AI)", null, false, 100, null, "Block (AI)", null, false, 101, null, "Block and Punish (AI)", null, false, 102, null, "Advancing Chickenblock (AI)", null, false, 103, null ]
selected = 0

[node name="LocalButton" type="Button" parent="a"]
margin_top = 175.0
margin_right = 620.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 2 )
text = "LEMME AT EM"

[node name="Control" type="Control" parent="a"]
margin_top = 257.0
margin_right = 620.0
margin_bottom = 257.0

[node name="Online" type="Label" parent="a"]
margin_top = 272.0
margin_right = 620.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 1 )
text = "Online"
align = 1
valign = 1

[node name="e" type="VBoxContainer" parent="a"]
margin_top = 357.0
margin_right = 620.0
margin_bottom = 511.0
custom_constants/separation = 0

[node name="f" type="HBoxContainer" parent="a/e"]
margin_right = 620.0
margin_bottom = 79.0

[node name="g" type="VBoxContainer" parent="a/e/f"]
margin_right = 300.0
margin_bottom = 79.0
custom_constants/separation = 2

[node name="HostLabel" type="Label" parent="a/e/f/g"]
margin_right = 300.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
text = "Host"
align = 1

[node name="Host" type="LineEdit" parent="a/e/f/g"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 79.0
rect_min_size = Vector2( 300, 0 )
text = "localhost"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="h" type="VBoxContainer" parent="a/e/f"]
margin_left = 320.0
margin_right = 620.0
margin_bottom = 79.0
custom_constants/separation = 2

[node name="PortLabel" type="Label" parent="a/e/f/h"]
margin_right = 300.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
text = "Port"
align = 1

[node name="Port" type="LineEdit" parent="a/e/f/h"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 79.0
rect_min_size = Vector2( 300, 0 )
text = "31415"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="i" type="HBoxContainer" parent="a/e"]
margin_top = 79.0
margin_right = 620.0
margin_bottom = 154.0
alignment = 1

[node name="j" type="VBoxContainer" parent="a/e/i"]
margin_right = 300.0
margin_bottom = 75.0
custom_constants/separation = 2

[node name="OnlineLabel" type="Label" parent="a/e/i/j"]
margin_right = 300.0
margin_bottom = 41.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "Input"
align = 1

[node name="OnlineInput" type="OptionButton" parent="a/e/i/j"]
margin_top = 43.0
margin_right = 300.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 0 )
text = "Keyboard (Arrows, ASD)"
clip_text = true
align = 1
items = [ "Keyboard (Arrows, ASD)", null, false, 4096, null, "PlayStation Classic Controller", null, false, 0, null, "Mash (AI)", null, false, 100, null, "Block (AI)", null, false, 101, null, "Block and Punish (AI)", null, false, 102, null, "Advancing Chickenblock (AI)", null, false, 103, null ]
selected = 0

[node name="Control" type="Control" parent="a/e/i"]
margin_left = 320.0
margin_right = 620.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="k" type="HBoxContainer" parent="a"]
margin_top = 526.0
margin_right = 620.0
margin_bottom = 593.0

[node name="HostButton" type="Button" parent="a/k"]
margin_right = 300.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "IM HOSTING"

[node name="ClientButton" type="Button" parent="a/k"]
margin_left = 320.0
margin_right = 620.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "IM JOINING"

[node name="Art-continued-fracs" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1108, -158 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
